--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -26,25 +26,10 @@ console.log("supadata: ", supaData);
 <Pagelayout>
   <Hero />
   <Statestisk />
-  <Sektion titel="Hvem er jeg?" billede="/kristian1.webp" brødtekst1="Mit navn er Kristian Humaidan, og jeg står bag SoundWheel. Du kender mig måske som Ufo fra Ufo & Yepha, hvor jeg arbejdede med rytme og energi." brødtekst2="I dag hjælper jeg virksomheder med ro, fokus og trivsel gennem lyd og vibration. Jeg viser, hvordan lyd kan give medarbejdere en naturlig pause i en travl hverdag." brødtekst3="Sammen kan vi skabe balance, energi og nærvær på din arbejdsplads." />
-  <Sektion variant="sektion2" titel="Vil du opleve effekten på egen krop?" billede="/kristian_live.webp" brødtekst1="Book en kort, uforpligtende og guidet lyd-demo, og oplev SoundWheel live hos jer." brødtekst2="Ingen forberedelse - bare nysgerrighed og lyst til en energigivende pause, der reducerer stress og styrker arbejdsglæde." brødtekst3="Lyt, lær og mærk, hvordan ro og fokus vender tilbage - blot på under 10 minutter." />
+  <Sektion titel="Hvem er jeg?" billede="/kristian1.webp" brødtekst1="Mit navn er Kristian Humaidan, og jeg står bag SoundWheel. Du kender mig måske som Ufo fra Ufo & Yepha, hvor jeg arbejdede med rytme og energi." brødtekst2="I dag hjælper jeg virksomheder med ro, fokus og trivsel gennem lyd og vibration. Jeg viser, hvordan lyd kan give medarbejdere en naturlig pause i en travl hverdag." brødtekst3="Sammen kan vi skabe balance, energi og nærvær på din arbejdsplads." knap="LÆS MERE OM MIG" />
+  <Sektion variant="sektion2" titel="Vil du opleve effekten på egen krop?" billede="/kristian_live.webp" brødtekst1="Book en kort, uforpligtende og guidet lyd-demo, og oplev SoundWheel live hos jer." brødtekst2="Ingen forberedelse - bare nysgerrighed og lyst til en energigivende pause, der reducerer stress og styrker arbejdsglæde." brødtekst3="Lyt, lær og mærk, hvordan ro og fokus vender tilbage - blot på under 10 minutter." knap="BOOK DEMO" />
   <IllustrationSektion />
   <AbonnementSektion data={supaData} />
 
   <Marquee />
 </Pagelayout>
-=======
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <meta name="viewport" content="width=device-width" />
-    <meta name="generator" content={Astro.generator} />
-    <title>Astro</title>
-  </head>
-  <body>
-    <h1>Astro</h1>
-    <!-- <h1>Astro</h1> -->
-    <AbonnementSektion data={supaData} />
-  </body>
-</html>
