--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,19 +1,14 @@
 <section class="hero">
-  <div class="hero_img_wrapper top">
-    <img src="/herobillede1.svg" alt="" />
-  </div>
+  <img class="hero_img hero_img--top" src="/public/herobillede1.svg" alt="People working" />
 
   <div class="hero_box">
     <h1>VIL DU SKABE PAUSER DER BETALER SIG?</h1>
   </div>
 
-  <div class="hero_img_wrapper bottom">
-    <img src="/herobillede2.svg" alt="" />
-  </div>
+  <img class="hero_img hero_img--bottom" src="/public/herobillede2.svg" alt="Woman relaxing" />
 </section>
 
 <style>
-  /* Mobil først! */
   .hero {
     width: 100%;
     display: flex;
@@ -25,7 +20,7 @@
 
   .hero_img {
     width: 100%;
-    height: 33vh; /* eller 40vh eller 60vh alt efter hvad du ønsker */
+    height: 33vh;
     object-fit: cover;
     object-position: 70% 20%;
   }
@@ -34,15 +29,6 @@
     object-position: 50% 32%;
   }
 
-  .hero_left {
-    background-image: url("/herobillede1.svg");
-  }
-
-  .hero_right {
-    background-image: url("/herobillede2.svg");
-  }
-
-  /* Tekst ! */
   .hero_box {
     background: #3b1414;
     color: white;
@@ -50,8 +36,9 @@
     border-radius: 1.2rem;
     width: 400px;
     max-width: 90%;
+    margin: -2rem 0;
+    z-index: 5;
     text-align: center;
-    z-index: 10;
   }
 
   .hero_box h1 {
@@ -60,14 +47,13 @@
     line-height: 1.5;
     margin: 0;
   }
-
   /* Desktop ! */
 
   @media (min-width: 700px) {
     .hero {
-      position: relative; /* container for absolute-position */
+      position: relative;
       display: flex;
-      flex-direction: row; /* vandret rækkefølge */
+      flex-direction: row;
       justify-content: space-between;
       align-items: center;
       padding: 4rem 0;
@@ -77,7 +63,6 @@
     .hero_img--bottom {
       width: 40%;
       height: 100%;
-
       object-fit: cover;
       border-radius: 18px;
     }
