--- a/src/components/Marquee.astro
+++ b/src/components/Marquee.astro
@@ -77,8 +77,7 @@
   }
 
   .button:hover {
-    background-color: #cec4c3;
-    color: #38171a;
+    filter: brightness(1.25);
   }
 
   @keyframes scroll {
