--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -28,7 +28,7 @@
   </nav>
 </header>
 
-<script src="/src/pages/styles/burgermenu.js"></script>
+<script src="/src/pages/styles/burgermenu.js" is:client></script>
 
 <style>
   * {
