--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -28,7 +28,9 @@
   </nav>
 </header>
 
-<script src="/src/pages/styles/burgermenu.js" is:client></script>
+<script type="module" client:load>
+  import "/burgermenu.js";
+</script>
 
 <style>
   * {
