--- a/src/components/IllustrationSektion.astro
+++ b/src/components/IllustrationSektion.astro
@@ -1,8 +1,8 @@
 <section class="illustrationer">
-  <img class="laptop" src=" public/laptop.svg" alt="Computer med soundwheel" />
+  <img class="laptop" src=" laptop.svg" alt="Computer med soundwheel" />
   <div class="mobil_logo">
-    <img class="app_logo" src="public/app_logo.svg" alt="Soundwheels app logo" />
-    <img class="mobil" src="public/mobil.svg" alt="Mobil med soundwheel" />
+    <img class="app_logo" src="app_logo.svg" alt="Soundwheels app logo" />
+    <img class="mobil" src="mobil.svg" alt="Mobil med soundwheel" />
   </div>
 </section>
 
