--- a/src/components/Marquee.astro
+++ b/src/components/Marquee.astro
@@ -3,17 +3,17 @@
 <section>
   <div class="marquee">
     <ul class="marquee_content">
-      <li><img src="public/queueit.svg" alt="Queueit logo" /></li>
-      <li><img src="public/context&.svg" alt="context& logo" /></li>
-      <li><img src="public/queueit.svg" alt="Queueit logo" /></li>
-      <li><img src="public/context&.svg" alt="context& logo" /></li>
+      <li><img src="queueit.svg" alt="Queueit logo" /></li>
+      <li><img src="context&.svg" alt="context& logo" /></li>
+      <li><img src="queueit.svg" alt="Queueit logo" /></li>
+      <li><img src="context&.svg" alt="context& logo" /></li>
     </ul>
 
     <ul class="marquee_content">
-      <li><img src="public/queueit.svg" alt="Queueit logo" /></li>
-      <li><img src="public/context&.svg" alt="context& logo" /></li>
-      <li><img src="public/queueit.svg" alt="Queueit logo" /></li>
-      <li><img src="public/context&.svg" alt="context& logo" /></li>
+      <li><img src="queueit.svg" alt="Queueit logo" /></li>
+      <li><img src="context&.svg" alt="context& logo" /></li>
+      <li><img src="queueit.svg" alt="Queueit logo" /></li>
+      <li><img src="context&.svg" alt="context& logo" /></li>
     </ul>
   </div>
 </section>
