--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,11 +1,11 @@
 <section class="hero">
-  <img class="hero_img hero_img--top" src="/public/herobillede1.svg" alt="People working" />
+  <img class="hero_img hero_img--top" src="herobillede1.svg" alt="People working" />
 
   <div class="hero_box">
     <h1>VIL DU SKABE PAUSER DER BETALER SIG?</h1>
   </div>
 
-  <img class="hero_img hero_img--bottom" src="/public/herobillede2.svg" alt="Woman relaxing" />
+  <img class="hero_img hero_img--bottom" src="herobillede2.svg" alt="Woman relaxing" />
 </section>
 
 <style>
