--- a/src/components/Statestisk.astro
+++ b/src/components/Statestisk.astro
@@ -9,7 +9,7 @@
     <div class="sw-statistik_gitter">
       <article class="sw-statistik_element">
         <div class="sw-donut1">
-          <img src="/public/donut1.svg" alt="" />
+          <img src="donut1.svg" alt="" />
         </div>
         <p class="sw-statistik_procent">34%</p>
         <p class="sw-statistik_tekst">En bedre balance mellem krop, sind og følelser.</p>
@@ -17,7 +17,7 @@
 
       <article class="sw-statistik_element">
         <div class="sw-donut2">
-          <img src="/public/donut2.svg" alt="" />
+          <img src="donut2.svg" alt="" />
         </div>
         <p class="sw-statistik_procent">31%</p>
         <p class="sw-statistik_tekst">En stærkere følelse af fællesskab og samhørighed.</p>
@@ -25,7 +25,7 @@
 
       <article class="sw-statistik_element">
         <div class="sw-donut3">
-          <img src="/public/donut3.svg" alt="" />
+          <img src="donut3.svg" alt="" />
         </div>
         <p class="sw-statistik_procent">16%</p>
         <p class="sw-statistik_tekst">En øget kreativitet og inspiration, samt fornyet energi og klarhed.</p>
